--- a/public/css/game/game.css
+++ b/public/css/game/game.css
@@ -12,6 +12,18 @@ section {
     height: 100%;
 }
 
+div#codeMessage {
+    position: absolute;
+    display: none;
+    background-color: rgb(53, 53, 53);
+    right: 10px;
+    top: 10px;
+    height: 40px;
+    width: 140px;
+    line-height: 40px;
+    animation: codeMessage 0.3s linear;
+}
+
 div#game {
     position: absolute;
     left: 50%;
