--- a/public/css/game/game.css
+++ b/public/css/game/game.css
@@ -77,3 +77,48 @@ img.pacmanLife {
     height: 20px;
     transform: rotateZ(180deg);
 }
+
+div#mobileButtonsContaner {
+    display: none;
+    position: fixed;
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 148px;
+    width: 250px;
+}
+
+button.mobileButtons {
+    width: 70px;
+    height: 70px;
+    margin: 6px;
+    background-color: rgb(70, 70, 70);
+    border: solid rgb(16, 16, 16) 2px;
+    background-position: center;
+}
+
+button.mobileButtons:focus {
+    background-color: rgb(50, 50, 50);
+}
+
+div.mobileButtonsSeparator {
+    width: 100%;
+    height: 0px;
+}
+
+button.mobileButtons#mobileButtonUp {
+    margin: 0 auto;
+    background-image: url(/images/Arrows/arrow-up.png);
+}
+
+button.mobileButtons#mobileButtonDown {
+    background-image: url(/images/Arrows/arrow-down.png);
+}
+
+button.mobileButtons#mobileButtonLeft {
+    background-image: url(/images/Arrows/arrow-left.png);
+}
+
+button.mobileButtons#mobileButtonRight {
+    background-image: url(/images/Arrows/arrow-right.png);
+}
