--- a/public/css/game/game.css
+++ b/public/css/game/game.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: game, Arial, Helvetica, sans-serif;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -46,18 +46,20 @@ canvas#gameCanvas {
     background-color: black;
 }
 
-ul#gameHUD {  
+ul#gameHUD {
     position: absolute;
     width: 100%;
     height: 50px;    
 }
 
 li#highScoreTitle {
+    display: none;
     font-size: 20px;
     margin-top: 5px;
 }
 
 li#highScore {
+    display: none;
     position: absolute;
     bottom: 5px;
     left: 50%;
@@ -65,6 +67,7 @@ li#highScore {
 }
 
 li#score {
+    display: none;
     position: absolute;
     left: 20px;
     bottom: 5px;
