--- a/public/css/game/game.css
+++ b/public/css/game/game.css
@@ -31,6 +31,12 @@ div#fpsDisplay {
     right: 5px;
 }
 
+div#loadingMsg {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
+
 div#game {
     position: absolute;
     left: 50%;
