--- a/public/css/game/game.css
+++ b/public/css/game/game.css
@@ -12,6 +12,34 @@ section {
     height: 100%;
 }
 
+/* ---- */
+
+ins.adsbygoogle {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 200px;
+    height: auto;
+    /*border: solid #444 2px;*/
+    border-radius: 8px;
+}
+
+ins.adsbygoogle span {
+    display: none; /* */
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    position: absolute;
+    top: -10px;
+    left: 5px;
+    padding: 2px;
+    border: solid #222 2px;
+    background-color: #444;
+    border-radius: 4px;
+}
+
+/* ---- */
+
 div#codeMessage {
     position: absolute;
     display: none;
